--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Adrian Mummey <amummey@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@cosmjs/stargate": "^0.27.1",
     "browser-resolve": "^2.0.0",
     "cosmwasm": "^0.27.1-1",
     "esmify": "^2.1.1"
